fix: clipping buttons and missing chat background (#956)

--- a/styles/css/components/table/table.css
+++ b/styles/css/components/table/table.css
@@ -13,6 +13,7 @@
 		display: grid;
 		grid-template-columns: subgrid;
 		grid-column: 1 / -1;
+		align-items: center;
 	}
 
 	.fu-table__row--deeply-nested {
